classDiagram
    class Owner {
        +String name
        +String email
        +int dailyTimeAvailable
        +List~String~ preferences
        +List~Constraint~ constraints
        +List~Pet~ pets
        +addPet(pet: Pet)
        +addConstraint(constraint: Constraint)
        +getAvailableMinutes() int
    }

    class Pet {
        +String name
        +String species
        +String breed
        +int age
        +String healthNotes
        +List~Task~ tasks
        +addTask(task: Task)
        +getPendingTasks() List~Task~
    }

    class Task {
        +String name
        +TaskType type
        +int durationMinutes
        +int priority
        +String frequency
        +TimeSlot preferredTimeOfDay
        +Pet pet
        +bool isCompleted
        +String lastCompletedDate
        +complete()
        +reset()
    }

    class Constraint {
        +String description
        +TimeSlot affectedTimeSlot
        +int blockedMinutes
        +Pet affectedPet
    }

    class Scheduler {
        +Owner owner
        +DailyPlan currentPlan
        +generatePlan() DailyPlan
        +prioritizeTasks(tasks: List~Task~) List~Task~
        +explainPlan() String
        +getTotalScheduledTime() int
    }

    class DailyPlan {
        +String date
        +List~ScheduledTask~ scheduledTasks
        +String reasoning
        +getTotalDuration() int
        +summarize() String
    }

    class ScheduledTask {
        +Task task
        +Pet pet
        +String scheduledTime
        +bool isCompleted
    }

    class TaskType {
        <<enumeration>>
        WALK
        FEEDING
        MEDICATION
        ENRICHMENT
        GROOMING
        VET_VISIT
    }

    class TimeSlot {
        <<enumeration>>
        MORNING
        AFTERNOON
        EVENING
        NIGHT
    }

    Owner "1" --> "1..*" Pet : owns
    Owner "1" --> "0..*" Constraint : has
    Pet "1" o-- "0..*" Task : owns
    Task "0..*" --> "0..1" Pet : belongs to
    Task --> TaskType : typed as
    Task --> TimeSlot : preferred slot
    Constraint --> TimeSlot : blocks slot
    Constraint "0..*" --> "0..1" Pet : restricts
    Scheduler "1" --> "1" Owner : serves
    Scheduler "1" --> "0..1" DailyPlan : holds current
    DailyPlan "1" --> "0..*" ScheduledTask : contains
    ScheduledTask --> Task : wraps
    ScheduledTask --> Pet : for
